--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,6 @@
         <title>Testing Firebase</title>
     </head>
     <body>
-        <h1 style="text-align: center; font-size: large;">Testing Firebase</h1>
+        <h1 style="text-align: center; font-size: large;">Testing Firebase Example</h1>
     </body>
 </html>
